tests/reference/asr-generics_04-b134140.stderr
semantic error: Argument type does not match parameter's restriction
 --> tests/errors/generics_04.py:5:10
  |
5 | def f(x: T) -> T:
  |          ^ Type mismatch
  |
11 | print(f("a"))
  |         ^^^ Type mismatch
